--- a/src/App.css
+++ b/src/App.css
@@ -17,6 +17,7 @@ time, mark, audio, video {
 	box-sizing: border-box;
 	font-size: 100%;
 	font: inherit;
+	font-family: loos-normal, sans-serif;
 	vertical-align: baseline;
 }
 /* HTML5 display-role reset for older browsers */
