--- a/src/App.css
+++ b/src/App.css
@@ -19,8 +19,9 @@ time, mark, audio, video {
 	font: inherit;
 	font-family: loos-normal, sans-serif;
 	vertical-align: baseline;
+	overflow: hidden;
 }
-/* HTML5 display-role reset for older browsers */
+/* HTML5 display-role reset for	 older browsers */
 article, aside, details, figcaption, figure, 
 footer, header, hgroup, menu, nav, section {
 	display: block;
